correção de barras

--- a/tox.ini
+++ b/tox.ini
@@ -13,8 +13,8 @@ deps =
   webtests-local: -r web-local_requirements.txt
 
 commands_pre =
-  robotidy --config .\pyproject.toml ./**/*.resource
-	robotidy --config .\pyproject.toml ./**/*.robot
+  ; robotidy --config pyproject.toml ./**/*.resource
+	; robotidy --config pyproject.toml ./**/*.robot
   robocop -e missing-space-after-comment -e missing-doc-keyword -e empty-lines-between-sections --reports timestamp,all
 commands =
   servicetests-local: robot -d ./logs_service -x output-xunit.xml -e mobiletest -e webtest {posargs}
